// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when multiple documents are present for asset types 1`] = `
<body>
  <div>
    <div
      class="table-div"
    >
      <div>
        <table
          class="MuiTable-root Table-module_Table__S9QdU Table-module_Table--row-no-color__pf1f2"
        >
          <thead
            class="MuiTableHead-root ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
          >
            <tr
              class="MuiTableRow-root header-row MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head asset-type-cell"
                scope="col"
              >
                asset-code
                <div
                  class="Tooltip-module_Tooltip__zWahO"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-60 iconButtonStyles-42-59 iconButtonStyles-text-62"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root tooltip-icon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head all-files-header"
                scope="col"
              >
                <span
                  class="all-files-header-wrapper"
                >
                  <svg
                    class="all-files-icon"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product-name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <button
                  aria-label="Download"
                  class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-60 iconButtonStyles-medium-66 iconButtonStyles-text-62 external-download-button"
                  data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"[\\\\\\"http://localhost/pim-document-id\\\\\\",\\\\\\"http://localhost/pim-document-id\\\\\\"]\\"}"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      class="format-icon"
                      data-name="ico 32 Doc ZIP"
                      height="28"
                      viewBox="0 0 32 32"
                      width="26"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M18 0H5v28h21V8Z"
                        data-name="Path 2064"
                        fill="#aeb1b1"
                      />
                      <path
                        d="M6 27V1h12v7h7v19Z"
                        data-name="Path 2065"
                        fill="#fff"
                      />
                      <rect
                        data-name="Rectangle 2935"
                        fill="#359486"
                        height="10"
                        rx="1"
                        transform="translate(0 13)"
                        width="19"
                      />
                      <g
                        data-name="Group 1511"
                        fill="#fff"
                      >
                        <path
                          d="M3 21v-1l3.5-4H3v-1h5v1l-3.5 4H8v1Z"
                          data-name="Path 2066"
                        />
                        <path
                          d="M9 21v-6h1v6Z"
                          data-name="Path 2067"
                        />
                        <path
                          d="M11 21v-6h2.5c2.355 0 2.5 1.2 2.5 2 0 .825-.6 2-2.5 2H12v2Zm1-5v2h1.5c1.186 0 1.5-.583 1.5-1 0-.5-.116-1-1.5-1Z"
                          data-name="Path 2068"
                        />
                      </g>
                      <g
                        fill="#aeb1b1"
                      >
                        <path
                          d="M9 1h1v1H9z"
                          data-name="Rectangle 2936"
                        />
                        <path
                          d="M10 2h1v1h-1z"
                          data-name="Rectangle 2937"
                        />
                        <path
                          d="M9 3h1v1H9z"
                          data-name="Rectangle 2938"
                        />
                        <path
                          d="M10 4h1v1h-1z"
                          data-name="Rectangle 2939"
                        />
                        <path
                          d="M9 5h1v1H9z"
                          data-name="Rectangle 2940"
                        />
                        <path
                          d="M10 6h1v1h-1z"
                          data-name="Rectangle 2941"
                        />
                        <path
                          d="M9 7h1v1H9z"
                          data-name="Rectangle 2942"
                        />
                        <path
                          d="M10 8h1v1h-1z"
                          data-name="Rectangle 2943"
                        />
                        <path
                          d="M9 9h1v1H9z"
                          data-name="Rectangle 2944"
                        />
                        <path
                          d="M10 10h1v1h-1z"
                          data-name="Rectangle 2945"
                        />
                        <path
                          d="M9 11h1v1H9z"
                          data-name="Rectangle 2946"
                        />
                        <path
                          d="M10 12h1v1h-1z"
                          data-name="Rectangle 2947"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <span
                  class=""
                >
                  <div
                    class="MuiFormControl-root Checkbox-module_Checkbox__zn5Y8"
                  >
                    <label
                      class="MuiFormControlLabel-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-69 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="MC: documentLibrary.download product1"
                            class="PrivateSwitchBase-input-72"
                            data-indeterminate="false"
                            name="product-code-0"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                      />
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product-name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <button
                  aria-label="Download"
                  class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-60 iconButtonStyles-medium-66 iconButtonStyles-text-62 external-download-button"
                  data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"[\\\\\\"http://localhost/pim-link-document-id\\\\\\",\\\\\\"http://localhost/pim-link-document-id\\\\\\"]\\"}"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      class="format-icon"
                      data-name="ico 32 Doc ZIP"
                      height="28"
                      viewBox="0 0 32 32"
                      width="26"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M18 0H5v28h21V8Z"
                        data-name="Path 2064"
                        fill="#aeb1b1"
                      />
                      <path
                        d="M6 27V1h12v7h7v19Z"
                        data-name="Path 2065"
                        fill="#fff"
                      />
                      <rect
                        data-name="Rectangle 2935"
                        fill="#359486"
                        height="10"
                        rx="1"
                        transform="translate(0 13)"
                        width="19"
                      />
                      <g
                        data-name="Group 1511"
                        fill="#fff"
                      >
                        <path
                          d="M3 21v-1l3.5-4H3v-1h5v1l-3.5 4H8v1Z"
                          data-name="Path 2066"
                        />
                        <path
                          d="M9 21v-6h1v6Z"
                          data-name="Path 2067"
                        />
                        <path
                          d="M11 21v-6h2.5c2.355 0 2.5 1.2 2.5 2 0 .825-.6 2-2.5 2H12v2Zm1-5v2h1.5c1.186 0 1.5-.583 1.5-1 0-.5-.116-1-1.5-1Z"
                          data-name="Path 2068"
                        />
                      </g>
                      <g
                        fill="#aeb1b1"
                      >
                        <path
                          d="M9 1h1v1H9z"
                          data-name="Rectangle 2936"
                        />
                        <path
                          d="M10 2h1v1h-1z"
                          data-name="Rectangle 2937"
                        />
                        <path
                          d="M9 3h1v1H9z"
                          data-name="Rectangle 2938"
                        />
                        <path
                          d="M10 4h1v1h-1z"
                          data-name="Rectangle 2939"
                        />
                        <path
                          d="M9 5h1v1H9z"
                          data-name="Rectangle 2940"
                        />
                        <path
                          d="M10 6h1v1h-1z"
                          data-name="Rectangle 2941"
                        />
                        <path
                          d="M9 7h1v1H9z"
                          data-name="Rectangle 2942"
                        />
                        <path
                          d="M10 8h1v1h-1z"
                          data-name="Rectangle 2943"
                        />
                        <path
                          d="M9 9h1v1H9z"
                          data-name="Rectangle 2944"
                        />
                        <path
                          d="M10 10h1v1h-1z"
                          data-name="Rectangle 2945"
                        />
                        <path
                          d="M9 11h1v1H9z"
                          data-name="Rectangle 2946"
                        />
                        <path
                          d="M10 12h1v1h-1z"
                          data-name="Rectangle 2947"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              />
            </tr>
            <tr
              class="MuiTableRow-root row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <svg
                  class="no-document-icon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when not all products have all asset types 1`] = `
<body>
  <div>
    <div
      class="table-div"
    >
      <div>
        <table
          class="MuiTable-root Table-module_Table__S9QdU Table-module_Table--row-no-color__pf1f2"
        >
          <thead
            class="MuiTableHead-root ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
          >
            <tr
              class="MuiTableRow-root header-row MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head asset-type-cell"
                scope="col"
              >
                asset-code
                <div
                  class="Tooltip-module_Tooltip__zWahO"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-36 iconButtonStyles-42-35 iconButtonStyles-text-38"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root tooltip-icon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head asset-type-cell"
                scope="col"
              >
                asset-code
                <div
                  class="Tooltip-module_Tooltip__zWahO"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-36 iconButtonStyles-42-35 iconButtonStyles-text-38"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root tooltip-icon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head all-files-header"
                scope="col"
              >
                <span
                  class="all-files-header-wrapper"
                >
                  <svg
                    class="all-files-icon"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product-name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <a
                  data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-document-id\\"}"
                  download="pim-document-title"
                  href="http://localhost/pim-document-id"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    class="format-icon"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h32v32H0z"
                      fill="none"
                    />
                    <path
                      d="M21 2H8v28h21V10Z"
                      fill="#aeb1b1"
                    />
                    <path
                      d="M9 29V3h12v7h7v19Z"
                      fill="#fff"
                    />
                    <rect
                      fill="#d43533"
                      height="10"
                      rx="1"
                      width="21"
                      x="3"
                      y="15"
                    />
                    <g
                      fill="#fff"
                    >
                      <path
                        d="M6 23v-6h1.944c.737 0 2.556.132 2.556 2 0 1.9-1.95 2-2.5 2H7v2Zm1-5v2h.874c.672 0 1.474-.121 1.474-1 0-.814-.7-1-1.551-1ZM11 17h2.214A2.838 2.838 0 0 1 16 19.885V20a2.8 2.8 0 0 1-2.592 2.994.914.914 0 0 0-.128.006H11Zm1 1v4h1.116a1.757 1.757 0 0 0 1.9-1.602v-.004A1.729 1.729 0 0 0 15 20c0-1.628-1.222-2-2.244-2ZM17 23v-6h4v1h-3v1.5h2.5v1H18V23Z"
                      />
                    </g>
                  </svg>
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <svg
                  class="no-document-icon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <span
                  class=""
                >
                  <div
                    class="MuiFormControl-root Checkbox-module_Checkbox__zn5Y8"
                  >
                    <label
                      class="MuiFormControlLabel-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-45 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="MC: documentLibrary.download product1"
                            class="PrivateSwitchBase-input-48"
                            data-indeterminate="false"
                            name="product-code-0"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                      />
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product-name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <svg
                  class="no-document-icon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <a
                  aria-disabled="false"
                  aria-label="Download"
                  class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-36 iconButtonStyles-medium-42 iconButtonStyles-text-38 external-download-button"
                  data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                  href="http://localhost/pim-link-document-id"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      class="external-link-icon"
                      viewBox="0 0 32 32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M28 2H10l-8 8v18a2.006 2.006 0 0 0 2 2h24a2.006 2.006 0 0 0 2-2V4a2.006 2.006 0 0 0-2-2Zm-4.12 8.54-6.96 6.96-2.41-2.41 6.96-6.96L18.34 5l8.65.01.01 8.65Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              />
            </tr>
            <tr
              class="MuiTableRow-root row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <svg
                  class="no-document-icon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <svg
                  class="no-document-icon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`DesktopDocumentTechnicalTableResults component Renders correctly when only single documents are present for asset types 1`] = `
<body>
  <div>
    <div
      class="table-div"
    >
      <div>
        <table
          class="MuiTable-root Table-module_Table__S9QdU Table-module_Table--row-no-color__pf1f2"
        >
          <thead
            class="MuiTableHead-root ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
          >
            <tr
              class="MuiTableRow-root header-row MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                MC: documentLibrary.headers.product
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head asset-type-cell"
                scope="col"
              >
                asset-code
                <div
                  class="Tooltip-module_Tooltip__zWahO"
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-12 iconButtonStyles-42-11 iconButtonStyles-text-14"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root tooltip-icon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head all-files-header"
                scope="col"
              >
                <span
                  class="all-files-header-wrapper"
                >
                  <svg
                    class="all-files-icon"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 20v-2H5v2Zm0-10h-4V4H9v6H5l7 7Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    MC: documentLibrary.headers.allFiles
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product-name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <a
                  data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-document-id\\"}"
                  download="pim-document-title"
                  href="http://localhost/pim-document-id"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    class="format-icon"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h32v32H0z"
                      fill="none"
                    />
                    <path
                      d="M21 2H8v28h21V10Z"
                      fill="#aeb1b1"
                    />
                    <path
                      d="M9 29V3h12v7h7v19Z"
                      fill="#fff"
                    />
                    <rect
                      fill="#d43533"
                      height="10"
                      rx="1"
                      width="21"
                      x="3"
                      y="15"
                    />
                    <g
                      fill="#fff"
                    >
                      <path
                        d="M6 23v-6h1.944c.737 0 2.556.132 2.556 2 0 1.9-1.95 2-2.5 2H7v2Zm1-5v2h.874c.672 0 1.474-.121 1.474-1 0-.814-.7-1-1.551-1ZM11 17h2.214A2.838 2.838 0 0 1 16 19.885V20a2.8 2.8 0 0 1-2.592 2.994.914.914 0 0 0-.128.006H11Zm1 1v4h1.116a1.757 1.757 0 0 0 1.9-1.602v-.004A1.729 1.729 0 0 0 15 20c0-1.628-1.222-2-2.244-2ZM17 23v-6h4v1h-3v1.5h2.5v1H18V23Z"
                      />
                    </g>
                  </svg>
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <span
                  class=""
                >
                  <div
                    class="MuiFormControl-root Checkbox-module_Checkbox__zn5Y8"
                  >
                    <label
                      class="MuiFormControlLabel-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-21 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="MC: documentLibrary.download product1"
                            class="PrivateSwitchBase-input-24"
                            data-indeterminate="false"
                            name="product-code-0"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                      />
                    </label>
                  </div>
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product-name
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <a
                  aria-disabled="false"
                  aria-label="Download"
                  class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-12 iconButtonStyles-medium-18 iconButtonStyles-text-14 external-download-button"
                  data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                  href="http://localhost/pim-link-document-id"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      class="external-link-icon"
                      viewBox="0 0 32 32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M28 2H10l-8 8v18a2.006 2.006 0 0 0 2 2h24a2.006 2.006 0 0 0 2-2V4a2.006 2.006 0 0 0-2-2Zm-4.12 8.54-6.96 6.96-2.41-2.41 6.96-6.96L18.34 5l8.65.01.01 8.65Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              />
            </tr>
            <tr
              class="MuiTableRow-root row"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                product3
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              >
                <svg
                  class="no-document-icon"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                  <path
                    d="m12.6 11.15-1.4 1.45L8 9.4l-3.15 3.2-1.4-1.45L6.6 8 3.45 4.8l1.4-1.4L8 6.6l3.2-3.2 1.4 1.4L9.45 8Z"
                    fill="currentColor"
                  />
                </svg>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body align-center"
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;
